--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kalkulator Angka Kredit</title>
+  <title>KEPO-AK (Kenali Potensi Angka Kredit)</title>
   <style>
     :root {
       --bps-blue: #005baa;
@@ -101,7 +101,7 @@
 
 <div class="card">
   <div class="header-area">
-    <h2>Kalkulator Angka Kredit</h2>
+    <h2>KEPO-AK (Kenali Potensi Angka Kredit)</h2>
     <p style="color:#94a3b8; font-size: 0.9rem;">BPS Kota Jakarta Barat</p>
   </div>
 
@@ -228,4 +228,5 @@ function prosesHitung() {
 }
 </script>
 </body>
+
 </html>
