--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <div class="input-grid">
     <div class="field">
-      <label>Jabatan Saat Ini</label>
+      <label>Jabatan Fungsional Saat Ini</label>
       <select id="jabatan">
         <option value="">-- Pilih Jabatan --</option>
         <option value="Pemula">Pemula</option>
@@ -262,3 +262,4 @@ function prosesHitung() {
 </script>
 </body>
 </html>
+
