--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <div class="card">
   <div class="header-area">
     <h2>PAK-Man (Penghitung Angka Kredit Mandiri)</h2>
-    <p style="color:#94a3b8; font-size: 0.9rem;">Internal Badan Pusat Statistik</p>
+    <p style="color:#94a3b8; font-size: 0.9rem;">BPS Kota Jakarta Barat</p>
   </div>
 
   <div class="input-grid">
@@ -262,4 +262,5 @@ function prosesHitung() {
 </script>
 </body>
 </html>
+
 
