--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       background-color: #f4f7fa;
       margin: 0;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
       padding: 20px;
     }
     .card {
@@ -288,6 +290,7 @@ function prosesHitung() {
 </script>
 </body>
 </html>
+
 
 
 
