--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
     td { 
       padding: 12px; 
       border-bottom: 1px solid #f1f5f9; 
-      text-align: center; /* SEMUA KOLOM RATA TENGAH */
+      text-align: center;
       font-family: 'Courier New', monospace; 
       font-size: 0.95rem;
     }
-    /* Kolom Bulan tetap tebal tapi rata tengah */
+   
     td:first-child { 
       font-family: inherit; 
       font-weight: 600; 
@@ -123,22 +123,22 @@
   width: 100%;
   max-width: 850px;
   text-align: center;
-  padding: 0 0 20px 0; /* Padding atas dibuat 0 */
+  padding: 0 0 20px 0;
   margin-top: 0;
-  color: #94a3b8; /* Tadi Anda pakai #f8f8f8, itu warna putih (hampir tidak terlihat) */
+  color: #94a3b8;
 }
 
 .footer-logo {
   max-width: 120px;
   height: auto;
   display: block;
-  margin: -30px auto 10px auto; /* Menaikkan 50px ke atas dan posisi tengah */
-  position: relative; /* Menambah kekuatan posisi */
-  z-index: 10; /* Memastikan logo berada di depan elemen lain */
+  margin: -30px auto 10px auto;
+  position: relative;
+  z-index: 10;
 }
 footer p {
-  margin-top: -30px; /* Semakin besar angka minusnya, semakin tinggi teks naik */
-  color: #94a3b8;    /* Warna abu-abu profesional */
+  margin-top: -30px;
+  color: #94a3b8;
   font-size: 0.85rem;
 }
   </style>
@@ -290,6 +290,7 @@ function prosesHitung() {
 </script>
 </body>
 </html>
+
 
 
 
