--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ footer p {
   <div id="hasil" class="table-wrapper"></div>
 </div>  <footer>
   <img src="logo-bps.png" alt="Logo BPS" class="footer-logo">
-  <p>© 2024 BPS Kota Jakarta Barat</p>
+  <p>© BPS Kota Jakarta Barat</p>
 </footer>
 
 <script>
@@ -290,6 +290,7 @@ function prosesHitung() {
 </script>
 </body>
 </html>
+
 
 
 
