--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
       padding-bottom: 20px;
     }
     .header-area h2 { color: var(--bps-blue); margin: 0; }
-    
+     input, select {
+       box-sizing: border-box; 
+      width: 100%;            
+    }
     .input-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: 1fr 1fr;);
       gap: 20px;
       margin-bottom: 25px;
     }
@@ -172,7 +175,7 @@ footer p {
     </div>
   </div>
 
-  <div class="input-grid" style="grid-template-columns: 2fr 1fr;">
+  <div class="input-grid">
     <div class="field">
       <label>Periode Mulai Hitung (Bulan - Tahun)</label>
       <input type="month" id="periodeMulai">
@@ -290,6 +293,7 @@ function prosesHitung() {
 </script>
 </body>
 </html>
+
 
 
 
